# CYRK3

./: CMakeLists.txt  readme.md
src/: benchmark_syrk.c  syrk.c  syrk.h  test_syrk.c
